# Surveying-and-Mapping-projects

Application for Traverse Network Adjustment/: CMakeLists.txt  README.md  adjustment.cpp  adjustment.h  application.cpp  application.h  application.ui  construct_matrics.cpp  get_coarse.cpp  graphic_item.cpp  graphic_item.h  helping.cpp  helping.h  helping.ui  main.cpp  matrix.cpp  matrix.h  resources.qrc  tools.cpp  tools.h
Qt_angle/: Angle.cpp  Angle.h  Angle.ui  CMakeLists.txt  main.cpp
Qt_cass/: CMakeLists.txt  cass_dlg.cpp  cass_dlg.h  cass_dlg.ui  func.cpp  main.cpp  sort_cass.cpp  sort_cass.h
Qt_draw/: CMakeLists.txt  canvas.cpp  canvas.h  canvas.ui  draw_dlg.cpp  draw_dlg.h  draw_dlg.ui  func.h  input.cpp  input.h  main.cpp
Qt_intersection/: CMakeLists.txt  back_intersection.cpp  back_intersection.h  back_intersection.ui  front_intersection.cpp  front_intersection.h  front_intersection.ui  func.cpp  func.h  image.qrc  intersection.cpp  intersection.h  intersection.ui  main.cpp
Qt_pol/: CMakeLists.txt  main.cpp  polygon_calculate.cpp  polygon_calculate.h  polygon_calculate.ui
Qt_quad/: CMakeLists.txt  image.qrc  main.cpp  quad.cpp  quad.h  quad_dlg.cpp  quad_dlg.h  quad_dlg.ui
Qt_trans/: CMakeLists.txt  lbh2xyz.cpp  lbh2xyz.h  lbh2xyz.ui  main.cpp  trans.cpp  trans.h  xyz2lbh.cpp  xyz2lbh.h  xyz2lbh.ui  坐标转换.ui
Qt_traverse/: CMakeLists.txt  calculation.cpp  calculation.h  func.cpp  func.h  main.cpp  traverse_dlg.cpp  traverse_dlg.h  traverse_dlg.ui  结果.txt
Voronoi Polygons/: Calculation.cpp  Calculation.h  Polygons.aps  Polygons.cpp  Polygons.h  Polygons.rc  Polygons.sln  Polygons.vcxproj  Polygons.vcxproj.filters  PolygonsDlg.cpp  PolygonsDlg.h  resource.h  tools.cpp  tools.h
Voronoi Polygons/Visualisation/: draw_triangles.py  draw_voronois.py
Voronoi Polygons/res/: Polygons.rc2
qt_levelingnetwork/: CMakeLists.txt  func.cpp  func.h  levelingnetwork.cpp  levelingnetwork.h  levelingnetwork_dlg.cpp  levelingnetwork_dlg.h  levelingnetwork_dlg.ui  main.cpp
